@startuml

title ビルダーパターン

package main {
    object main {
    }
}

package Builder {
    class Director {
        builder: Builder
        construct(arg): void
    }

    abstract Builder {
        {abstract} make_title(arg): void
        {abstract} make_str∂ing(arg): void
        {abstract} make_items(arg): void
        {abstract} close(arg): void
    }

    class TextBuilder {
        buffer: list
        make_title(arg): void
        make_string(arg): void
        make_items(arg): void
        close(arg): void
        get_result(arg): void
    }

    class HTMLBuilder {
        filename: string
        writer: Writer
        make_title(arg): void
        make_string(arg): void
        make_items(arg): void
        close(arg): void
        get_result(arg): void
    } 
}
    TextBuilder -up-|> Builder
    HTMLBuilder -up-|> Builder
    
    main -right-> Director : Uses
    main --> TextBuilder : Uses
    main --> HTMLBuilder : Uses

    Director o-right- Builder
    '左上から順に繋げる必要がある
    
    

@enduml